apps/base/vault-watchdog/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault-watchdog
  labels:
    name: vault-watchdog
    purpose: observability
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
